[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/views/editor/components/node_sidebar/node_sidebar.gd" type="Script" id=1]
[ext_resource path="res://ui/themes/fonts/fira_sans_bold.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/views/editor/components/inspector/inspector_panel_style.tres" type="StyleBox" id=3]

[node name="NodeSidebar" type="ScrollContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 250, 0 )
custom_styles/bg = ExtResource( 3 )
scroll_horizontal_enabled = false
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1366.0
margin_bottom = 768.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="DefaultContent" type="VBoxContainer" parent="MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 1354.0
margin_bottom = 756.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/DefaultContent"]
margin_top = 359.0
margin_right = 1342.0
margin_bottom = 384.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Select a node to display its local properties here. "
align = 1
autowrap = true

[node name="Properties" type="VBoxContainer" parent="MarginContainer"]
visible = false
margin_left = 12.0
margin_top = 12.0
margin_right = 1354.0
margin_bottom = 756.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NameLabel" type="Label" parent="MarginContainer/Properties"]
margin_right = 250.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )

[node name="HSeparator" type="HSeparator" parent="MarginContainer/Properties"]
margin_top = 27.0
margin_right = 250.0
margin_bottom = 35.0

[node name="InputLabel" type="Label" parent="MarginContainer/Properties"]
margin_top = 43.0
margin_right = 250.0
margin_bottom = 68.0
text = "Inputs"

[node name="Inputs" type="VBoxContainer" parent="MarginContainer/Properties"]
margin_top = 76.0
margin_right = 250.0
margin_bottom = 76.0

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/Properties"]
margin_top = 84.0
margin_right = 250.0
margin_bottom = 92.0

[node name="OutputLabel" type="Label" parent="MarginContainer/Properties"]
margin_top = 100.0
margin_right = 250.0
margin_bottom = 125.0
text = "Outputs"

[node name="Outputs" type="VBoxContainer" parent="MarginContainer/Properties"]
margin_top = 133.0
margin_right = 250.0
margin_bottom = 133.0
